--- a/TM.RestHour/Views/Regime/Index.cshtml
+++ b/TM.RestHour/Views/Regime/Index.cshtml
@@ -197,7 +197,30 @@
 
                                                     <div role="tabpanel" class="tab-pane" id="opa90">
                                                         <div class="col-md-12">
-                                                           
+
+
+
+
+
+                                                            <label>This regime complies fully with the OCIMF 'Recommendations Relating to the Application of Requirements Governing Seafarers ' Hours of work and Rest'.</label>
+                                                            <br />
+                                                            <label>These recommendations are minimum expectations to ensure compliance with related provisions and are provided for the information of OCIMF members. managers and the crew of applicable vessels.</label>
+                                                            <br />
+                                                            <button type="button" class="btn btn-link">@*Click here for the full text of the OCIMF recommendations*@</button>
+                                                            <br />
+                                                            <label>Not withstanding anything above. vessels are required to fully comply with their flag state requirements.</label>
+                                                            <br />
+                                                            <ul class="b">
+                                                                <li><label>Minimum continuous rest in any 24 hour period</label> &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <label><p id="MinContRestIn24Hours2"></p></label></li>
+                                                                <li><label>Minimum total rest in any 24 hour period</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <label><p id="MinTotalRestIn24Hours2"></p></label></li>
+                                                                <li><label>Minimum hours rest in any 7 day period</label> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <label><p id="MinTotalRestIn7Days2"></p></label></li>
+                                                            </ul>
+                                                            <label>The minimum of 10 hours rest in any 24 hour period may be divided into no more than 2 periods,one of which shall be at least 6 hours in length, and the interval between consecutive periods of rest shall not exceed 14 hours.</label>
+                                                            <br />
+
+
+
+
                                                             <button type="button" align="center" class="button1 wi" id="btnAdd9" onclick="return AddTab9();">Set Default Regime</button>
 
                                                         </div>
