--- a/TM.RestHour/Views/MailServerDetails/Index.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/Index.cshtml
@@ -74,7 +74,7 @@
                                             <input type="text" class="form-control" id="Port" placeholder="Port" />
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    @*<div class="col-md-3">
                                         <div class="form-group">
                                             <label for="MailFrom">Mail From</label>
                                             <input type="text" class="form-control" id="MailFrom" placeholder="Mail From" />
@@ -90,10 +90,8 @@
                                         <div class="form-group">
                                             <label for="Password">Password</label>
                                             <input type="password" class="form-control" id="Password" placeholder="Password" />
-                                            @*<input type="password" class="form-control" id="ConfirmPassword" maxlength="10" placeholder="Confirm Password" style="width: 100%;" />*@
-
                                         </div>
-                                    </div>
+                                    </div>*@
                                     @*///////////////////////////////////////////////////////////////////////////*@
                                     <div class="col-md-3">
                                         <div class="form-group">
