--- a/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
@@ -26,9 +26,12 @@
                 </div>*@
             <div class="clearfix"></div>
             <div class="row">
+
                 <div class="col-md-4">
                     <img src="~/background/HumanBody.jpg" style="width: 100%; float: right;" />
+                        <a href="@Url.Action("HumanBody", "CrewHealth")" class="button1">Go to the Image</a>
                 </div>
+
                 <div class="col-md-4" style="border: 1px solid #eee; padding: 10px;">
                     <div class="form-group">
                         <label for="Name Of Vessel">Name Of Vessel</label>
