--- a/TM.RestHour/Views/MailServerDetails/FirstRun.cshtml
+++ b/TM.RestHour/Views/MailServerDetails/FirstRun.cshtml
@@ -35,7 +35,7 @@
                     @*<button type="button" class="button" data-toggle="modal" data-target="#myModal" onclick="clearTextBox();">Add New Vessel</button><br /><br />*@
                     @Html.Hidden("myUrl", @Url.Action("GetCompanyDetails", "MailServerDetails"))
 
-                    @Html.Hidden("myUrl", @Url.Action("GetShipByID", "MailServerDetails"))
+                    @Html.Hidden("myUrlship", @Url.Action("GetShipByID", "MailServerDetails"))
                     @Html.Hidden("addnew", @Url.Action("AddNewVessel", "MailServerDetails"))
                     @Html.Hidden("NewUnitadd", @Url.Action("NewAdd", "MailServerDetails"))
 
