--- a/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
+++ b/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
@@ -153,7 +153,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div style="background: none repeat scroll 0 0 #C7C7C8;
+                                                @*<div style="background: none repeat scroll 0 0 #C7C7C8;
                                                      border: 1px solid #AEAEAE;
                                                      clear: both;
                                                      margin: 20px auto;
@@ -163,10 +163,23 @@
                                                     <input type="button" value="Show Tags" onclick="showTags()" />
                                                     <input type="button" value="Hide Tags" onclick="hideTags()" />
                                                     <input type="button" value="Save Image" onclick="saveImage()" />
-                                                </div>
+                                                </div>*@
                                             </div>
                                         </div>
+                       
                                     </fieldset>
+
+                                    <div style="background: none repeat scroll 0 0 #C7C7C8;
+                                                     border: 1px solid #AEAEAE;
+                                                     clear: both;
+                                                     margin: 20px auto;
+                                                     padding: 20px 0;
+                                                     text-align: center;
+                                                     width: 600px;">
+                                                    <input type="button" value="Show Tags" onclick="showTags()" />
+                                                    <input type="button" value="Hide Tags" onclick="hideTags()" />
+                                                    <input type="button" value="Save Image" onclick="saveImage()" />
+                                    </div>
             </div>
 
              <div class="modal-footer">
