--- a/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
+++ b/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
@@ -121,76 +121,76 @@
 @*<script src="~/Scripts/Department.js"></script>*@
 @Html.Hidden("myUrlForAssignCrew", @Url.Action("GetDepartmentByIDForAssignCrew", "Department"))
 @Html.Hidden("myUrl", @Url.Action("GetDepartmentByID", "Department"))
-
-<body style="background-image: url(../background/MedicalAdvisory.jpg);
+<form id="myform">
+    <body style="background-image: url(../background/MedicalAdvisory.jpg);
     background-size: cover;">
 
-    <div class="row">
-        <div class="col-md-5">
-            <h2 class="ta">Human Body</h2>
-        </div>
-        <div class="col-md-7 bac">
-            <div class="modal-dialog" id="dvuserdetailsn" style="width: 745px; height:460px">
-                <fieldset class="for-panel">
-                    <legend>Please Select The Coordinate</legend>
-                    <div class="row">
+        <div class="row">
+            <div class="col-md-5">
+                <h2 class="ta">Human Body</h2>
+            </div>
+            <div class="col-md-7 bac">
+                <div class="modal-dialog" id="dvuserdetailsn" style="width: 745px; height:460px">
+                    <fieldset class="for-panel">
+                        <legend>Please Select The Coordinate</legend>
+                        <div class="row">
 
-                        <div id='main_panel' style="width: 755px;">
-                            <div style='margin: auto; width: 600px;'>
-                                <div id='image_panel'>
-                                    <img src='~/background/L_HumanBody.jpg' id='imageMap' />
-                                    <div id='mapper'><img src='~/background/save.png' alt="save tag" onclick='openDialog()' /></div>
-                                    <div id="planetmap">
-                                    </div>
-                                    <div id='form_panel'>
-                                        <div class='row'>
-                                            <div class='label'>Title</div><div class='field'><input type='text' id='title' /></div>
+                            <div id='main_panel' style="width: 755px;">
+                                <div style='margin: auto; width: 600px;'>
+                                    <div id='image_panel'>
+                                        <img src='~/background/L_HumanBody.jpg' id='imageMap' />
+                                        <div id='mapper'><img src='~/background/save.png' alt="save tag" onclick='openDialog()' /></div>
+                                        <div id="planetmap">
                                         </div>
-                                        <div class='row'>
-                                            <div class='label'></div>
-                                            <div class='field'>
-                                                <input type='button' value='Add Tag' onclick='addTag()' />
+                                        <div id='form_panel'>
+                                            <div class='row'>
+                                                <div class='label'>Title</div><div class='field'><input type='text' id='title' /></div>
+                                            </div>
+                                            <div class='row'>
+                                                <div class='label'></div>
+                                                <div class='field'>
+                                                    <input type='button' value='Add Tag' onclick='addTag()' />
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                                @*<div style="background: none repeat scroll 0 0 #C7C7C8;
+                                         border: 1px solid #AEAEAE;
+                                         clear: both;
+                                         margin: 20px auto;
+                                         padding: 20px 0;
+                                         text-align: center;
+                                         width: 600px;">
+                                        <input type="button" value="Show Tags" onclick="showTags()" />
+                                        <input type="button" value="Hide Tags" onclick="hideTags()" />
+                                        <input type="button" value="Save Image" onclick="saveImage()" />
+                                    </div>*@
                             </div>
-                            @*<div style="background: none repeat scroll 0 0 #C7C7C8;
-                                     border: 1px solid #AEAEAE;
-                                     clear: both;
-                                     margin: 20px auto;
-                                     padding: 20px 0;
-                                     text-align: center;
-                                     width: 600px;">
-                                    <input type="button" value="Show Tags" onclick="showTags()" />
-                                    <input type="button" value="Hide Tags" onclick="hideTags()" />
-                                    <input type="button" value="Save Image" onclick="saveImage()" />
-                                </div>*@
                         </div>
-                    </div>
 
-                </fieldset>
+                    </fieldset>
 
-                <div style="background: none repeat scroll 0 0 #C7C7C8;
+                    <div style="background: none repeat scroll 0 0 #C7C7C8;
                                                      border: 1px solid #AEAEAE;
                                                      clear: both;
                                                      margin: 20px auto;
                                                      padding: 20px 0;
                                                      text-align: center;
                                                      width: 600px;">
-                    <input type="button" value="Show Tags" onclick="showTags()" />
-                    <input type="button" value="Hide Tags" onclick="hideTags()" />
-                    <input type="button" value="Save Image" onclick="CaptureImage()" />
+                        <input type="button" value="Show Tags" onclick="showTags()" />
+                        <input type="button" value="Hide Tags" onclick="hideTags()" />
+                        <input type="button" value="Save Image" onclick="CaptureImage()" />
+                    </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="buttonpop" style="width:86px;" onclick="switchImg()">Next</button>
                 </div>
             </div>
-
-            <div class="modal-footer">
-                <button type="button" class="buttonpop" style="width:86px;" onclick="switchImg()">Next</button>
-            </div>
         </div>
-    </div>
-</body>
-
+    </body>
+</form>
 @section Scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
@@ -418,15 +418,19 @@
 
          var CaptureImage = function () {
             html2canvas(document.querySelector("#image_panel")).then(canvas => {
-                document.body.appendChild(canvas)
+                //document.body.appendChild(canvas)
                 Canvas2Image.saveAsImage(canvas);
+                 deleteTag(document.querySelector("#image_panel"));
             });
 
-            
+             //$('#myform').submit();
         };
 
         var deleteTag = function (obj) {
-            $(obj).parent().parent().remove();
+            //$(obj).parent().parent().remove();
+           // $('.tagged_box').remove();
+            //$(".tagged_title").css("display", "none");
+            $('#planetmap').children('.tagged').remove();
         };
 
 
