--- a/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
+++ b/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
@@ -129,63 +129,47 @@
             <div class="col-md-5">
                 <h2 class="ta">Human Body</h2>
             </div>
-            <div class="col-md-7 bac">
-                <div class="modal-dialog" id="dvuserdetailsn" style="width: 745px; height:460px">
-                    <fieldset class="for-panel">
-                        <legend>Please Select The Coordinate</legend>
-                        <div class="row">
+            <div class="col-md-7" >
+                <div class="modal-dialog" id="dvuserdetailsn" style="width: 745px; ">
 
-                            <div id='main_panel' style="width: 755px;">
-                                <div style='margin: auto; width: 600px;'>
-                                    <div id='image_panel'>
-                                        <img src='~/background/F_HumanBody.jpg' id='imageMap' />
-                                        <div id='mapper'><img src='~/background/save.png' alt="save tag" onclick='openDialog()' /></div>
-                                        <div id="planetmap">
-                                        </div>
-                                        <div id='form_panel'>
-                                            <div class='row'>
-                                                <div class='label'>Title</div><div class='field'><input type='text' id='title' /></div>
-                                            </div>
-                                            <div class='row'>
-                                                <div class='label'></div>
-                                                <div class='field'>
-                                                    <input type='button' value='Add Tag' onclick='addTag()' />
-                                                </div>
-                                            </div>
+                    <div id='main_panel' style="width: 755px;">
+                        <div style='margin: auto; width: 600px;'>
+                            <div id='image_panel'>
+                                <img src='~/background/F_HumanBody.jpg' id='imageMap' />
+                                <div id='mapper'><img src='~/background/save.png' alt="save tag" onclick='openDialog()' /></div>
+                                <div id="planetmap">
+                                </div>
+                                <div id='form_panel'>
+                                    <div class='row'>
+                                        <div class='label'>Title</div><div class='field'><input type='text' id='title' /></div>
+                                    </div>
+                                    <div class='row'>
+                                        <div class='label'></div>
+                                        <div class='field'>
+                                            <input type='button' value='Add Tag' onclick='addTag()' />
                                         </div>
                                     </div>
                                 </div>
-                                @*<div style="background: none repeat scroll 0 0 #C7C7C8;
-                                         border: 1px solid #AEAEAE;
-                                         clear: both;
-                                         margin: 20px auto;
-                                         padding: 20px 0;
-                                         text-align: center;
-                                         width: 600px;">
-                                        <input type="button" value="Show Tags" onclick="showTags()" />
-                                        <input type="button" value="Hide Tags" onclick="hideTags()" />
-                                        <input type="button" value="Save Image" onclick="saveImage()" />
-                                    </div>*@
                             </div>
                         </div>
-
-                    </fieldset>
-
-                    <div style="background: none repeat scroll 0 0 #C7C7C8;
-                                                     border: 1px solid #AEAEAE;
+                    </div>
+                   
+                    <div style="
+                                                     /*background: none repeat scroll 0 0 #C7C7C8;*/
+                                                     /*border: 1px solid #AEAEAE;*/
                                                      clear: both;
                                                      margin: 20px auto;
                                                      padding: 20px 0;
                                                      text-align: center;
-                                                     width: 600px;">
-                        <input type="button" value="Show Tags" onclick="showTags()" />
-                        <input type="button" value="Hide Tags" onclick="hideTags()" />
-                        <input type="button" value="Save Image" onclick="CaptureImage()" />
-                    </div>
-                </div>
+                                                     width: 600px;
+                                                     height: 50px;">
+                        <button type="button" class="buttonpop" style="width:86px;" onclick="switchImg()">Rotate</button>
+                        <input type="button" class="buttonpop" value="Show Tags" onclick="showTags()" />
+                        <input type="button" class="buttonpop" value="Hide Tags" onclick="hideTags()" />
+                        <input type="button" class="buttonpop" value="Save Image" onclick="CaptureImage()" />
 
-                <div class="modal-footer">
-                    <button type="button" class="buttonpop" style="width:86px;" onclick="switchImg()">Next</button>
+                    </div>
+
                 </div>
             </div>
         </div>
