--- a/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
+++ b/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
@@ -163,11 +163,11 @@
                                                      text-align: center;
                                                      width: 600px;
                                                      height: 50px;">
-                        <button type="button" class="buttonpop" style="width:86px;" onclick="switchImg()">Rotate</button>
-                        <input type="button" class="buttonpop" value="Show Tags" onclick="showTags()" />
-                        <input type="button" class="buttonpop" value="Hide Tags" onclick="hideTags()" />
-                        <input type="button" class="buttonpop" value="Save Image" onclick="CaptureImage()" />
-
+                        <button type="button" class="buttonpop" style="width:86px;" onclick="switchImg()   ">Rotate    </button>
+                        <button type="button" class="buttonpop" style="width:86px;" onclick="showTags()    ">Show Tags </button>
+                        <button type="button" class="buttonpop" style="width:86px;" onclick="hideTags()    ">Hide Tags </button>
+                        <button type="button" class="buttonpop" style="width:86px;" onclick="CaptureImage()">Save Image</button>
+                             
                     </div>
 
                 </div>
