--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -18,7 +18,11 @@
     <link rel="stylesheet" href="~/link/css/layout.css">
 
 
-
+    @*<script src="~/Scripts/jquery-3.2.1.min.js"></script>
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    <script src="~/src/jquery.image-marker.js"></script>
+    <script src="../src/jquery.image-marker.js"></script>
+    <link rel="stylesheet" type="text/css" href="../src/jquery.image-marker.css">*@
 
 
     <link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />
@@ -29,7 +33,7 @@
     <script src="~/Scripts/Ranks.js"></script>
     <script src="~/Scripts/CrewList.js"></script>
     @*<link rel="stylesheet" href="~/link/css/styles.css">
-    <script src="~/link/css/script.js"></script>*@
+        <script src="~/link/css/script.js"></script>*@
     <style>
     </style>
 
