--- a/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
+++ b/TM.RestHour/Views/CrewHealth/HumanBody.cshtml
@@ -12,11 +12,11 @@
     }
 
     #mapper {
-        border: 0px solid #EEE;
-        width: 50px;
-        height: 50px;
-        min-width: 50px;
-        min-height: 50px;
+        border: 0px solid red;
+        width: 2px;
+        height: 2px;
+        min-width: 2px;
+        min-height: 2px;
         z-index: 1000;
         position: absolute;
         top: 0;
@@ -260,8 +260,8 @@
                 if ((top_distance + mapper_height > imagemap_height) && (left_distance + mapper_width > imagemap_width)) {
                     $('#mapper').css("left", (click_left - mapper_width - image_left))
                         .css("top", (click_top - mapper_height - image_top))
-                        .css("width", "50px")
-                        .css("height", "50px")
+                        .css("width", "2px")
+                        .css("height", "2px")
                         .show();
                 }
                 else if (left_distance + mapper_width > imagemap_width) {
@@ -269,16 +269,16 @@
 
                     $('#mapper').css("left", (click_left - mapper_width - image_left))
                         .css("top", top_distance)
-                        .css("width", "50px")
-                        .css("height", "50px")
+                        .css("width", "2px")
+                        .css("height", "2px")
                         .show();
 
                 }
                 else if (top_distance + mapper_height > imagemap_height) {
                     $('#mapper').css("left", left_distance)
                         .css("top", (click_top - mapper_height - image_top))
-                        .css("width", "50px")
-                        .css("height", "50px")
+                        .css("width", "2px")
+                        .css("height", "2px")
                         .show();
                 }
                 else {
@@ -286,8 +286,8 @@
 
                     $('#mapper').css("left", left_distance)
                         .css("top", top_distance)
-                        .css("width", "50px")
-                        .css("height", "50px")
+                        .css("width", "2px")
+                        .css("height", "2px")
                         .show();
                 }
 
@@ -301,7 +301,7 @@
         $("#planetmap").on("mouseover", ".tagged", function () {
             if ($(this).find(".openDialog").length == 0) {
                 $(this).find(".tagged_box").css("display", "block");
-                $(this).css("border", "5px solid #EEE");
+                $(this).css("border", "4px solid red");
 
                 $(this).find(".tagged_title").css("display", "block");
             }
@@ -376,7 +376,8 @@
         var showTags = function () {
             $(".tagged_box").css("display", "block");
             //$(".tagged_box").hide();
-            $(".tagged").css("border", "5px solid #EEE");
+            //$(".tagged").css("border", "5px solid #EEE"); ////////////////////////////////////////////////////////////////////////////////////////
+              $(".tagged").css("border", "5px solid red");
             $(".tagged_title").css("display", "block");
             //$(".tagged_title").hide();
             //$('tagged').show();
